kodex-rs/tui/src/bottom_pane/snapshots/kodex_tui__bottom_pane__chat_composer__tests__footer_mode_configured_key_chords.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"  Keyboard shortcuts                                                                                "
"                                                                                                    "
"  Compose                             Session                                                       "
"  /              Commands             tab     Send message                                          "
"  @              Mention files        ⌥,      Less reasoning                                        "
"  !              Shell command        ⌥.      More reasoning                                        "
"  ctrl+x enter   New line             f4      Inspect activity                                      "
"  ctrl+v         Paste image          ctrl+c  Quit                                                  "
"  ctrl+g ctrl+g  External editor                                                                    "
"  ctrl+r         Search history       Transcript (open first)                                       "
"  esc esc        Edit last message    ctrl+t                Open transcript                         "
"                                      f3                    Find text                               "
"                                      pgup / pgdn           Scroll                                  "
"                                      ctrl+space            Start selection                         "
"                                      ctrl+home / ctrl+end  Top / latest                            "
"                                      shift+⌥, / shift+⌥.   Top / latest                            "
"                                                                                                    "
"  /keymap customize                                                                                 "
"                                                                                                    "
"› Ask Kodex to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ? / esc close                                                                                     "
